@@ -33,6 +33,7 @@ Verilator 5.031 devel
 * Improve concatenation performance (#5598) (#5599) (#5602). [Geza Lore]
 * Fix dotted reference in delay value (#2410).
 * Fix `function fork...join_none` regression with unknown type (#4449).
+* Fix public_module requiring a wire to become public (#4916). [Andrew Nolte]
 * Fix can't locate scope error in interface task delayed assignment (#5462) (#5568). [Zhou Shen]
 * Fix BLKANDNBLK for for VARXREFs (#5569). [Todd Strader]
 * Fix VPI error instead of fatal for vpi_get_value() on large signals (#5571). [Todd Strader]
